--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,4 +1,21 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:400);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
-$background-color: #BBB ;
+// COMMON
+$background-color: #F0F0F0 ;
+
+$border-radius: 5px;
+$border:solid black 2px;
+
+// TABS
+$tab-width:70px;
+$tab-height:$tab-width;
+$tab-background:#FEFEFE;
+
+// SLIDE PREVIEW
+$slide-size:calc(100% - #{$tab-width});
+$slide-background:#FEFEFE;
+
+// editor
+$editor-height:80vh;
+$editor-min-height:300px;
