--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,11 +6,54 @@ body {
     background-color: $background-color ;
 }
 
+body,html{
+    margin:0;
+    padding:0;
+}
+
 h1,h2,h3,h4,h5,h6{
     @include title-font();
 }
 
 .slide {
+    background-color: $slide-background;
+    padding:5px;
+    border-radius:$border-radius;
+    border: $border;
+    display:inline-block;
     background-repeat: no-repeat;
     background-size: contain;
+    width:100%;
+}
+
+.tabs{
+    display:inline-block;
+    box-sizing: border-box;
+    width:$tab-width + 25px;
+    height:$editor-height;
+    min-height:$editor-min-height;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    border-bottom:$border;
+    border-bottom-right-radius: $border-radius;
+}
+
+.slide_tab{
+    @include title-font(12px);
+    font-weight: bold;
+    background-color: $tab-background;
+    border-top-right-radius: $border-radius;
+    border-bottom-right-radius: $border-radius;
+    border-right:$border;
+    border-top:$border;
+    cursor:pointer;
+    overflow:hidden;
+    text-overflow: ellipsis;
+    height:$tab-height;
+    width:$tab-width;
+    padding:3px;
+}
+
+.slide_tab:last-child{
+
 }
