--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -7,13 +7,16 @@ $background-color: #F0F0F0 ;
 $border-radius: 5px;
 $border:solid black 2px;
 
-// TABS
+// TAB
 $tab-width:70px;
 $tab-height:$tab-width;
 $tab-background:#FEFEFE;
 
+// TABS
+$tabs-width: $tab-width + 25px;
+
 // SLIDE PREVIEW
-$slide-size:calc(100% - #{$tab-width});
+$slide-width:calc(100% - #{$tabs-width});
 $slide-background:#FEFEFE;
 
 // editor
