--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -8,7 +8,7 @@ $border-radius: 5px;
 $border:solid black 2px;
 
 // TAB
-$tab-width:70px;
+$tab-width:100px;
 $tab-height:$tab-width;
 $tab-background:#FEFEFE;
 
@@ -20,5 +20,4 @@ $slide-width:calc(100% - #{$tabs-width});
 $slide-background:#FEFEFE;
 
 // editor
-$editor-height:80vh;
-$editor-min-height:300px;
+$editor-height:100%;
