--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,14 +40,22 @@ h1,h2,h3,h4,h5,h6{
     vertical-align: top;
     height: 100%;
 
-    .slide-right {
-        display: inline-block;
-        width: 50%;
-    }
-
     .slide-media {
         display: inline-block;
         width: 50%;
+
+        * {
+            display: block;
+        }
+    }
+
+    .slide-right {
+        display: inline-block;
+        width: 50%;
+
+        * {
+            display: block;
+        }
     }
 }
 
