SCSS series : Prettier buttons, part1
* Shamelessly taken style from bootstrap
* Delete buttons on tabs are now prettier
* TODO : "add slide" button & select era

--- a/scss/_slide.scss
+++ b/scss/_slide.scss
@@ -61,6 +61,7 @@
 }
 
 .slide_tab{
+    position: relative;
     @include title-font(12px);
     font-weight: bold;
     background-color: $tab-background;
