--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,8 @@
 @import 'vars';
 @import 'mixins';
+@import 'button';
 @import 'slide';
+@import 'tabs';
 
 body {
     @include main-font();
@@ -28,17 +30,6 @@ h1,h2,h3,h4,h5,h6{
     height: 90vh;
 }
 
-.tabs{
-    display:inline-block;
-    box-sizing: border-box;
-    width:$tabs-width;
-    height:$editor-height;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    border-bottom:$border;
-    border-bottom-right-radius: $border-radius;
-}
-
 .json {
     position: fixed;
     width: 80%;
@@ -52,83 +43,6 @@ h1,h2,h3,h4,h5,h6{
         background-color: white;
         overflow: auto;
     }
-}
-
-$topnav_element_height:48px;
-.topnav_element{
-    margin: 2px 2px 0 2px;
-    display:inline-block;
-    height:$topnav_element_height;
-    box-sizing: border-box;
-    border-radius: 6px;
-    text-align: center;
-    vertical-align: middle;
-    white-space: nowrap;
-}
-
-.button_main { // shamelessly taken from bootstrap css
-    @extend .topnav_element;
-    padding: 0 16px;
-    font-size: 18px;
-    cursor: pointer;
-    -moz-user-select: none; // rend le contenu non selectionnable
-    border: 1px solid transparent;
-    &.blue{
-        color: #FFF;
-        background-color: #337AB7;
-        border-color: #2E6DA4;
-        &:hover{
-            background-color: #286090;
-            border-color: #204d74;
-        }
-    }
-
-    &.lightblue{
-        color: #FFF;
-        background-color: #5BC0DE;
-        border-color: #46B8DA;
-
-        &:hover{
-            background-color: #31b0d5;
-            border-color: #269abc;
-        }
-    }
-
-    &.red{
-        color: #FFF;
-        background-color: #d9534f;
-        border-color: #d43f3a;
-
-        &:hover{
-            background-color: #c9302c;
-            border-color: #ac2925;
-        }
-    }
-
-    &.small{
-        height:24px;
-        padding: 2px 4px;
-        font-size: 14px;
-        line-height: 1.2;
-        border-radius: 3px;
-    }
-}
-
-.removeslide{
-    @extend .button_main, .small, .red;
-    position: absolute;
-    margin:3px;
-    bottom: 0;
-    right:0;
-    float:right;
-}
-
-.newslide{
-    @extend .button_main, .small, .blue;
-    width:100%;
-    margin-left:0;
-    margin-right:0;
-    box-sizing: border-box;
 }
 
 .selectscaletext{
