small improvement SCSS wise
* Text in tabs are not selectionnable anymore
* Textarea of "text" is now bigger

--- a/scss/_tabs.scss
+++ b/scss/_tabs.scss
@@ -13,6 +13,7 @@
 .slide_tab{
     position: relative;
     @include title-font(12px);
+    -moz-user-select: none;
     font-weight: bold;
     background-color: $tab-background;
     border-top-right-radius: $border-radius;
