--- a/scss/_slide.scss
+++ b/scss/_slide.scss
@@ -21,8 +21,14 @@
         width:100%;
         border:solid 1px #555;
         border-radius: 3px;
+        resize:none;
+
+        &[name='text']{
+            height:120px;
+        }
+
         &:focus{
-            border-color: #AAA;
+            border-color: #999;
         }
     }
 }
