SCSS : Delete btn on tabs only display on hover

--- a/scss/_tabs.scss
+++ b/scss/_tabs.scss
@@ -26,6 +26,16 @@
     height:$tab-height;
     width:$tab-width;
     padding:3px;
+
+    & .removeslide{
+        display:none;
+    }
+
+    &:hover{
+        & .removeslide{
+            display:inline-block;
+        }
+    }
 }
 
 .slide_tab:last-child{
