--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,7 +38,7 @@ h1,h2,h3,h4,h5,h6{
     height: $editor-height;
 }
 
-.json {
+.json, .preview {
     position: fixed;
     width: 90%;
     height: 90vh;
