--- a/scss/main.scss
+++ b/scss/main.scss
@@ -65,6 +65,11 @@ h1,h2,h3,h4,h5,h6{
     resize: none;
 }
 
+.preview iframe {
+    width: 85%;
+    height: 80%;
+}
+
 .selectscaletext{
     @extend .topnav_element;
     $scalefontsize:18px;
