Mask background when preview

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -46,6 +46,7 @@ h1,h2,h3,h4,h5,h6{
     bottom: 5vh;
     left: 5%;
     right: 5%;
+    z-index: 2;
 
     padding:10px;
 
@@ -77,4 +78,16 @@ h1,h2,h3,h4,h5,h6{
         font-family: inherit;
         font-size: $scalefontsize;
     }
+}
+
+.mask {
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    background-color: black;
+    opacity: 0.6;
 }
