--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,7 +38,7 @@ h1,h2,h3,h4,h5,h6{
     height: $editor-height;
 }
 
-.json, .preview {
+.export, .preview {
     position: fixed;
     width: auto;
     height: auto;
@@ -55,7 +55,7 @@ h1,h2,h3,h4,h5,h6{
     border-radius: 20px;
 }
 
-.json textarea, .preview iframe {
+.export textarea, .preview iframe {
     @include main-font(10px);
     display: block;
     overflow-x: hidden;
@@ -65,6 +65,10 @@ h1,h2,h3,h4,h5,h6{
     // TODO : remplacer 90px par une vraie valeur dépendante du style
     margin: 0 auto;
     resize: none;
+}
+
+.export h1, .export select {
+    display: inline-block;
 }
 
 .selectscaletext{
