--- a/scss/main.scss
+++ b/scss/main.scss
@@ -85,6 +85,25 @@ h1,h2,h3,h4,h5,h6{
     }
 }
 
+.media_preview{
+    margin:0 auto;
+}
+
+iframe.media_preview{
+    height:60%;
+    width:100%;
+    max-width:90wh;
+    max-height:90vh;
+}
+
+img.media_preview{
+    height:auto;
+    width:auto;
+    max-height:100%;
+    max-width:100%;
+}
+
+
 .mask {
     position: fixed;
     z-index: 1;
