Remove button arent always visible

--- a/scss/_tabs.scss
+++ b/scss/_tabs.scss
@@ -29,12 +29,12 @@
     width:$tab-width;
     padding:3px;
 
-    &.removeslide{
+    &>.removeslide{
         display:none;
     }
 
     &:hover{
-        & .removeslide{
+        &>.removeslide{
             display:inline-block;
         }
     }
