--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,7 +39,7 @@ h1,h2,h3,h4,h5,h6{
     height: $editor-height;
 }
 
-.export, .preview {
+.export, .preview, .signupscreen, .loginscreen {
     position: fixed;
     width: auto;
     height: auto;
