--- a/scss/_select.scss
+++ b/scss/_select.scss
@@ -17,12 +17,17 @@
 .select_timeline_preview {
     position: relative;
     display: inline-block;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    margin-right: 10px;
+    margin-bottom: 10px;
     border: 2px solid black;
     border-radius: 5px;
     padding: 5px;
     width: 20%;
+	cursor:pointer;
+
+	&:hover{
+		box-shadow: 2px 2px 5px 0px rgba(128,128,128,0.8);
+	}
 
     p {
         margin-top: 0;
@@ -33,4 +38,13 @@
     overflow-x: none;
     overflow-y: auto;
     height: 90%;
+}
+
+.removetimeline{
+	@extend .closebutton;
+    position: absolute;
+    margin:0px;
+    bottom:2px;
+    right:2px;
+    float:right;
 }
