Resize login and signup screen.

--- a/scss/_popup.scss
+++ b/scss/_popup.scss
@@ -57,6 +57,14 @@
     }
 }
 
+.signupscreen {
+    height: 220px;
+}
+
+.loginscreen {
+    height: 185px;
+}
+
 .closepopup{
     @extend .closebutton;
     position: absolute;
