client.scss:Small refactor (popup)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,7 +4,7 @@
 @import 'slide';
 @import 'tabs';
 @import 'select';
-@import 'popup';
+@import 'popup/popup';
 
 body {
     @include main-font();
@@ -38,33 +38,6 @@ h1,h2,h3,h4,h5,h6{
 
 .content {
     height: $editor-height;
-}
-
-
-
-.export textarea, .preview iframe {
-    @include main-font(10px);
-    display: block;
-    overflow-x: hidden;
-    overflow-y: auto;
-    width: 95%;
-    height: calc(100% - 90px);
-    // TODO : remplacer 90px par une vraie valeur dépendante du style
-    margin: 0 auto;
-    resize: none;
-}
-
-.export h1, .export select {
-    display: inline-block;
-}
-
-.export h1{
-    margin-right:16px;
-}
-
-.export select{
-    font-weight:bold;
-    font-size:  1.6em ;
 }
 
 .selectscaletext{
