--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,3 +1,19 @@
+@mixin transition($args...) {
+  -webkit-transition: $args;
+  -moz-transition: $args;
+  -ms-transition: $args;
+  -o-transition: $args;
+  transition: $args;
+}
+
+@mixin box-shadow($args...) {
+  -webkit-box-shadow: $args;
+  -moz-box-shadow: $args;
+  -ms-box-shadow: $args;
+  -o-box-shadow: $args;
+  box-shadow: $args;
+}
+
 @mixin main-font($size : 'auto'){
     font-family : "Open Sans", "Arial", sans-serif;
     @if ($size != 'auto'){
