--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,17 +80,20 @@ img.media_preview{
 }
 
 textarea,input{
+    outline:none;
+    $inset-focus-color: rgb(81,137,232);
+    $border-color: #ccc ;
     background-image: none;
-    border: 1px solid #ccc;
+    border: 1px solid $border-color;
     border-radius: 4px;
-    box-shadow: inset 1px 1px 2px -1px rgba(0,0,0,0.15);
-    -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    -moz-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    -ms-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    @include box-shadow(inset 1px 1px 2px -1px rgba(0,0,0,0.15));
+    @include transition(border-color ease-in-out .15s,box-shadow ease-in-out .15s);
     &:focus{
-        box-shadow: inset 1px 1px 2px -1px rgba(81,137,232,0.15),0 0 5px rgba(81,137,232,0.5);
-        border-color:rgb(81,137,232);
+        @include box-shadow(inset 1px 1px 2px -1px rgba($inset-focus-color,0.15),0 0 5px rgba($inset-focus-color,0.5));
+        border-color:$inset-focus-color;
+        &[readonly]{
+            @include box-shadow(inset 1px 1px 2px -1px rgba(0,0,0,0.15));
+            border-color: $border-color;
+        }
     }
 }
