client.scss:Cross browser compat, mixins power

--- a/scss/_select.scss
+++ b/scss/_select.scss
@@ -7,11 +7,8 @@
 	background-image: none;
 	border: 1px solid #ccc;
 	border-radius: 4px;
-	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-	-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-	-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+	@include box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
+	@include transition(border-color ease-in-out .15s,box-shadow ease-in-out .15s);
 }
 
 .select_timeline_preview {
@@ -26,7 +23,7 @@
 	cursor:pointer;
 
 	&:hover{
-		box-shadow: 2px 2px 5px 0px rgba(128,128,128,0.8);
+		@include box-shadow(2px 2px 5px 0px rgba(128,128,128,0.8));
 	}
 
     p {
