--- a/scss/_slide.scss
+++ b/scss/_slide.scss
@@ -28,6 +28,11 @@
     }
 }
 
+input.headline_input {
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
 .datepicker {
     display: flex;
 }
