--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,11 @@
+@import 'crossbrowser';
 @import 'vars';
 @import 'mixins';
 @import 'button';
 @import 'slide';
 @import 'tabs';
 @import 'select';
+@import 'topnav';
 @import 'popup/popup';
 
 body {
