--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,3 +1,7 @@
+/*******************************
+ * CROSS BROWSER COMPATIBILITY *
+ *******************************/
+
 @mixin transition($args...) {
   -webkit-transition: $args;
   -moz-transition: $args;
@@ -13,6 +17,16 @@
   -o-box-shadow: $args;
   box-shadow: $args;
 }
+
+@mixin user-select($args...) {
+  -webkit-user-select: $args;
+  -moz-user-select: $args;
+  -ms-user-select: $args;
+}
+
+/***********************************
+ * END CROSS BROWSER COMPATIBILITY *
+ ***********************************/
 
 @mixin main-font($size : 'auto'){
     font-family : "Open Sans", "Arial", sans-serif;
