--- a/scss/popup/_popup.scss
+++ b/scss/popup/_popup.scss
@@ -73,8 +73,10 @@
     @extend .closebutton;
     position: absolute;
     margin:0px;
-    top: 10px;
-    right:10px;
-    width:20px;
+    top: 5px;
+    right: 5px;
+    width:36px;
+    height:36px;
+    font-size: 3em ;
     float:right;
 }
