--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -2,14 +2,14 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
 // COMMON
-$background-color: #F0F0F0 ;
+$background-color: rgb(248, 248, 248) ;
 
 $border-radius: 5px;
 $border:solid black 2px;
 
 // TAB
 $tab-width:100px;
-$tab-height:$tab-width;
+$tab-height:3*$tab-width/4;
 $tab-background:#FEFEFE;
 
 // TABS
