--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -5,8 +5,6 @@
 $background-color: rgb(248, 248, 248) ;
 
 $border-radius: 5px;
-$border:solid black 2px;
-
 // TAB
 $tab-width:100px;
 $tab-height:3*$tab-width/4;
@@ -15,13 +13,16 @@ $tab-background:#FEFEFE;
 // TABS
 $tabs-width: $tab-width + 20px;
 
-// SLIDE PREVIEW
-$slide-width:calc(100% - #{$tabs-width});
-$slide-background:#FEFEFE;
+$light-border-color:#ccc;
+$grey-border-color:#999;
+$dark-border-color:#555;
+
+$inactive-text-color:#555;
+$active-text-color:#000;
 
 // editor
 
 $topnav_element_height:34px;
-$topnav_height:52px;
+$topnav_height:47px;
 
 $editor-height:calc(100vh - #{$topnav_height});
