--- a/scss/main.scss
+++ b/scss/main.scss
@@ -59,37 +59,11 @@ h1,h2,h3,h4,h5,h6{
     }
 }
 
-.media_preview{
-    margin:0 auto;
-}
-
-iframe.media_preview,div.media_preview{
-    height:60%;
-    width:100%;
-    max-width:90wh;
-    max-height:90vh;
-}
-
-div.media_preview.empty{
-    display: flex;
-    font-size: 2em;
-    align-items: center;
-    text-align: center;
-}
-
-img.media_preview{
-    height:auto;
-    width:auto;
-    max-height:100%;
-    max-width:100%;
-}
-
 textarea,input{
     outline:none;
     $inset-focus-color: rgb(81,137,232);
-    $border-color: #ccc ;
     background-image: none;
-    border: 1px solid $border-color;
+    border: 1px solid $light-border-color;
     border-radius: 4px;
     @include box-shadow(inset 1px 1px 2px -1px rgba(0,0,0,0.15));
     @include transition(border-color ease-in-out .15s,box-shadow ease-in-out .15s);
@@ -98,7 +72,7 @@ textarea,input{
         border-color:$inset-focus-color;
         &[readonly]{
             @include box-shadow(inset 1px 1px 2px -1px rgba(0,0,0,0.15));
-            border-color: $border-color;
+            border-color: $light-border-color;
         }
     }
 }
